Update swagger for retrieve-runtime-artifacts resource
